Fixed project sliding on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -467,7 +467,7 @@ html {
 .projects-slider {
   flex: 1;
   overflow: hidden;
-  touch-action: pan-x;
+  touch-action: pan-x pan-y;
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
